--- a/index.html
+++ b/index.html
@@ -690,16 +690,16 @@
     </ul>
     <div class="c-tournaments__prizes">
             <picture>
-        <source srcset="images/load.svg" data-srcset="images/tournaments/place1.webp">
-        <img src="images/load.svg" data-src="images/tournaments/place1.png" alt="Place 1" title="Place 1" class="lazyload" height="40" width="40">
+        <source srcset="images/load.svg" data-srcset="images/place1.webp">
+        <img src="images/load.svg" data-src="images/place1.png" alt="Place 1" title="Place 1" class="lazyload" height="40" width="40">
         </picture>
             <picture>
-        <source srcset="images/load.svg" data-srcset="images/tournaments/place2.webp">
-        <img src="images/load.svg" data-src="images/tournaments/place2.png" alt="Place 2" title="Place 2" class="lazyload" height="40" width="40">
+        <source srcset="images/load.svg" data-srcset="images/place2.webp">
+        <img src="images/load.svg" data-src="images/place2.png" alt="Place 2" title="Place 2" class="lazyload" height="40" width="40">
         </picture>
             <picture>
-        <source srcset="images/load.svg" data-srcset="images/tournaments/place3.webp">
-        <img src="images/load.svg" data-src="images/tournaments/place3.png" alt="Place 3" title="Place 3" class="lazyload" height="40" width="40">
+        <source srcset="images/load.svg" data-srcset="images/place3.webp">
+        <img src="images/load.svg" data-src="images/place3.png" alt="Place 3" title="Place 3" class="lazyload" height="40" width="40">
         </picture>
         </div>
     <p class="c-tournaments__reward">100 FS</p>
@@ -721,16 +721,16 @@
     </ul>
     <div class="c-tournaments__prizes">
             <picture>
-        <source srcset="images/load.svg" data-srcset="images/tournaments/place1.webp">
-        <img src="images/load.svg" data-src="images/tournaments/place1.png" alt="Place 1" title="Place 1" class="lazyload" height="40" width="40">
+        <source srcset="images/load.svg" data-srcset="images/place1.webp">
+        <img src="images/load.svg" data-src="images/place1.png" alt="Place 1" title="Place 1" class="lazyload" height="40" width="40">
         </picture>
             <picture>
-        <source srcset="images/load.svg" data-srcset="images/tournaments/place2.webp">
-        <img src="images/load.svg" data-src="images/tournaments/place2.png" alt="Place 2" title="Place 2" class="lazyload" height="40" width="40">
+        <source srcset="images/load.svg" data-srcset="images/place2.webp">
+        <img src="images/load.svg" data-src="images/place2.png" alt="Place 2" title="Place 2" class="lazyload" height="40" width="40">
         </picture>
             <picture>
-        <source srcset="images/load.svg" data-srcset="images/tournaments/place3.webp">
-        <img src="images/load.svg" data-src="images/tournaments/place3.png" alt="Place 3" title="Place 3" class="lazyload" height="40" width="40">
+        <source srcset="images/load.svg" data-srcset="images/place3.webp">
+        <img src="images/load.svg" data-src="images/place3.png" alt="Place 3" title="Place 3" class="lazyload" height="40" width="40">
         </picture>
         </div>
     <p class="c-tournaments__reward">€ 1700</p>
