--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@
 <div class="c-promotions lazyload">
   <div class="c-promotions__item">
     <picture>
-      <source srcset="images/load.svg" data-srcset="images/promotions/calendar-link.webp">
-      <img src="images/load.svg" data-src="images/promotions/calendar-link.png" alt="Season's Battle" title="Season's Battle" class="lazyload" height="190" width="232">
+      <source srcset="images/load.svg" data-srcset="images/calendar-link.webp">
+      <img src="images/load.svg" data-src="images/calendar-link.png" alt="Season's Battle" title="Season's Battle" class="lazyload" height="190" width="232">
     </picture>
     <div class="c-promotions__text">
       <p class="c-promotions__title">Season's Battle</p>
@@ -494,8 +494,8 @@
   </div>
   <div class="c-promotions__item">
     <picture>
-      <source srcset="images/load.svg" data-srcset="images/promotions/P1.webp">
-      <img src="images/load.svg" data-src="images/promotions/P1.png" alt="Loterie" title="Loterie" class="lazyload" height="190" width="232">
+      <source srcset="images/load.svg" data-srcset="images/P1.webp">
+      <img src="images/load.svg" data-src="images/P1.png" alt="Loterie" title="Loterie" class="lazyload" height="190" width="232">
     </picture>
     <div class="c-promotions__text">
       <p class="c-promotions__title">Loterie</p>
@@ -505,8 +505,8 @@
   </div>
   <div class="c-promotions__item">
     <picture>
-      <source srcset="images/load.svg" data-srcset="images/promotions/P-2.webp">
-      <img src="images/load.svg" data-src="images/promotions/P-2.png" alt="Turnieje" title="Turnieje" class="lazyload" height="190" width="232">
+      <source srcset="images/load.svg" data-srcset="images/P-2.webp">
+      <img src="images/load.svg" data-src="images/P-2.png" alt="Turnieje" title="Turnieje" class="lazyload" height="190" width="232">
     </picture>
     <div class="c-promotions__text">
       <p class="c-promotions__title">Turnieje</p>
@@ -516,8 +516,8 @@
   </div>
   <div class="c-promotions__item">
     <picture>
-      <source srcset="images/load.svg" data-srcset="images/promotions/P-3.webp">
-      <img src="images/load.svg" data-src="images/promotions/P-3.png" alt="Bonusy" title="Bonusy" class="lazyload" height="190" width="232">
+      <source srcset="images/load.svg" data-srcset="images/P-3.webp">
+      <img src="images/load.svg" data-src="images/P-3.png" alt="Bonusy" title="Bonusy" class="lazyload" height="190" width="232">
     </picture>
     <div class="c-promotions__text">
       <p class="c-promotions__title">Bonusy</p>
