--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide3-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide3-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide3.webp">
-        <img src="images/load.svg" data-src="images/slider/slide3.jpg" alt="Nagrody każdego dnia!" title="Nagrody każdego dnia!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide3-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide3-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide3.webp">
+        <img src="images/load.svg" data-src="images/slide3.jpg" alt="Nagrody każdego dnia!" title="Nagrody każdego dnia!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Nagrody każdego dnia!</p>
@@ -146,10 +146,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide4-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide4-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide4.webp">
-        <img src="images/load.svg" data-src="images/slider/slide4.jpg" alt="Non-Stop Drop!" title="Non-Stop Drop!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide4-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide4-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide4.webp">
+        <img src="images/load.svg" data-src="images/slide4.jpg" alt="Non-Stop Drop!" title="Non-Stop Drop!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Non-Stop Drop!</p>
@@ -161,10 +161,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide5-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide5-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide5.webp">
-        <img src="images/load.svg" data-src="images/slider/slide5.jpg" alt="Wygrywaj fajne nagrody!" title="Wygrywaj fajne nagrody!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide5-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide5-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide5.webp">
+        <img src="images/load.svg" data-src="images/slide5.jpg" alt="Wygrywaj fajne nagrody!" title="Wygrywaj fajne nagrody!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Wygrywaj fajne nagrody!</p>
@@ -176,10 +176,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide6-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide6-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide6.webp">
-        <img src="images/load.svg" data-src="images/slider/slide6.jpg" alt="Drops &amp; Wins!" title="Drops &amp; Wins!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide6-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide6-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide6.webp">
+        <img src="images/load.svg" data-src="images/slide6.jpg" alt="Drops &amp; Wins!" title="Drops &amp; Wins!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Drops &amp; Wins!</p>
@@ -191,10 +191,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide7-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide7-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide7.webp">
-        <img src="images/load.svg" data-src="images/slider/slide7.jpg" alt="Buckets of Gold Nuggets!" title="Buckets of Gold Nuggets!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide7-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide7-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide7.webp">
+        <img src="images/load.svg" data-src="images/slide7.jpg" alt="Buckets of Gold Nuggets!" title="Buckets of Gold Nuggets!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Buckets of Gold Nuggets!</p>
@@ -206,10 +206,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide8-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide8-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide8.webp">
-        <img src="images/load.svg" data-src="images/slider/slide8.jpg" alt="Wonder Farm!" title="Wonder Farm!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide8-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide8-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide8.webp">
+        <img src="images/load.svg" data-src="images/slide8.jpg" alt="Wonder Farm!" title="Wonder Farm!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Wonder Farm!</p>
@@ -221,10 +221,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide9-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide9-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide9.webp">
-        <img src="images/load.svg" data-src="images/slider/slide9.jpg" alt="Wheel of Fortune!" title="Wheel of Fortune!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide9-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide9-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide9.webp">
+        <img src="images/load.svg" data-src="images/slide9.jpg" alt="Wheel of Fortune!" title="Wheel of Fortune!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Wheel of Fortune!</p>
@@ -236,10 +236,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide10-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide10-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide10.webp">
-        <img src="images/load.svg" data-src="images/slider/slide10.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide10-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide10-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide10.webp">
+        <img src="images/load.svg" data-src="images/slide10.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Darmowy bonus dla ciebie!</p>
@@ -251,10 +251,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide11-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide11-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide11.webp">
-        <img src="images/load.svg" data-src="images/slider/slide11.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide11-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide11-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide11.webp">
+        <img src="images/load.svg" data-src="images/slide11.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Darmowy bonus dla ciebie!</p>
@@ -266,10 +266,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide12-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide12-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide12.webp">
-        <img src="images/load.svg" data-src="images/slider/slide12.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide12-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide12-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide12.webp">
+        <img src="images/load.svg" data-src="images/slide12.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Wygraj do 100 000 €!</p>
@@ -280,10 +280,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide13-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide13-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide13.webp">
-        <img src="images/load.svg" data-src="images/slider/slide13.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide13-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide13-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide13.webp">
+        <img src="images/load.svg" data-src="images/slide13.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Nagrody warte 400 000 €!</p>
@@ -294,10 +294,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide14-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide14-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide14.webp">
-        <img src="images/load.svg" data-src="images/slider/slide14.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide14-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide14-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide14.webp">
+        <img src="images/load.svg" data-src="images/slide14.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Poznaj NORSE TALES!</p>
@@ -308,10 +308,10 @@
     </div>
     <div class="c-slide js-slide">
       <picture>
-        <source srcset="images/load.svg" data-srcset="images/slider/slide15-d.webp" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide15-d.jpg" media="(min-width: 577px)">
-        <source srcset="images/load.svg" data-srcset="images/slider/slide15.webp">
-        <img src="images/load.svg" data-src="images/slider/slide15.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
+        <source srcset="images/load.svg" data-srcset="images/slide15-d.webp" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide15-d.jpg" media="(min-width: 577px)">
+        <source srcset="images/load.svg" data-srcset="images/slide15.webp">
+        <img src="images/load.svg" data-src="images/slide15.jpg" alt="Darmowy bonus dla ciebie!" title="Darmowy bonus dla ciebie!" class="c-slide__img lazyload" height="160" width="290">
       </picture>
       <div class="c-slide__body">
         <p class="c-slide__title">Slottica - Fruits Craze!</p>
