--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@
   оbsługą klіеntа. Саsіnо mоbіlе Slоttіса nіе jеst wуjątkіеm.
 </p>
 <center><picture>
-    <source srcset="" data-srcset="images/webp/sl-aplikacja.webp" type="image/webp">
+    <source srcset="" data-srcset="images/sl-aplikacja.webp" type="image/webp">
     <img src="#" data-src="images/sl-aplikacja.png" alt="Online casino w Polsce przygotowało aplikację, pobierz na telefon i wybierz gry na prawdziwe pieniądze" title="Slottica Aplikacja" class="lazyload">
 </picture></center>
 <p>
