--- a/index.html
+++ b/index.html
@@ -560,14 +560,6 @@ Slottica wyróżnia się dostępnością gier od wiodących producentów, co zwi
   </div>
 </div>
 
-<h2 id="jak">Aplikacja kasyna Slottica</h2>
-<p>Obecnie około 67% populacji światowej korzysta z telefonów komórkowych, a ich liczba ciągle wzrasta. W Slottica, wychodzimy naprzeciw oczekiwaniom naszych użytkowników, oferując nie tylko standardową wersję naszej strony na komputery, ale również zoptymalizowaną wersję mobilną. Często dostarczamy również dedykowaną aplikację kasynową, która pozwala grać na prawdziwe pieniądze bezpośrednio z telefonu. Dzięki temu nasi gracze mają pełny dostęp do wszystkich usług: mogą dokonywać wpłat, wypłacać wygrane, stawiać zakłady oraz kontaktować się z naszą obsługą klienta. W Slottica Casino nie jesteśmy wyjątkiem, stawiamy na innowacje i najlepsze doświadczenia dla naszych użytkowników.</p>
-<center><picture>
-    <source srcset="" data-srcset="images/sl-aplikacja.webp" type="image/webp">
-    <img src="#" data-src="images/sl-aplikacja.png" alt="Online casino w Polsce przygotowało aplikację, pobierz na telefon i wybierz gry na prawdziwe pieniądze" title="Slottica Aplikacja" class="lazyload">
-</picture></center>
-<p>Chociaż nasza strona internetowa jest kompatybilna zarówno z komputerami stacjonarnymi, jak i urządzeniami mobilnymi, oferujemy również bezpłatną aplikację mobilną, która sprawia, że gra jest jeszcze wygodniejsza. Nasza aplikacja kasyna online jest dostępna tylko na urządzeniach mobilnych z systemami operacyjnymi Android i iOS. Aplikację Slottica APK można pobrać na dwa sposoby. Pierwszą opcją jest skorzystanie z linku podanego na naszej stronie i pobranie pliku instalacyjnego za pomocą przycisku "Pobierz". Drugą metodą jest zeskanowanie kodu QR. Nawiasem mówiąc, jeśli przed zainstalowaniem aplikacji dokonałeś depozytu w wysokości co najmniej 5 GBP, po zainstalowaniu oprogramowania na smartfonie otrzymasz bonus bez depozytu.</p>
-
 <h2 id="wpłata">Kasyno Slottica: Wpłaty i wypłaty</h2>
 <p>Chociaż działamy w Polsce pozwala grać w wersję demo całkowicie za darmo, pełne emocje zapewnia gra na prawdziwe pieniądze. Użytkownicy mogą wybierać spośród wielu metod wpłat, ale tylko trzy z nich umożliwiają również wypłaty. Należy jednak zauważyć, że opcje płatności SMS i eCopayz SMS nie są dostępne dla graczy z Polski.</p>
 
@@ -576,7 +568,7 @@ Slottica wyróżnia się dostępnością gier od wiodących producentów, co zwi
     <thead>
       <tr>
         <th>Metoda płatności</th>
-        <th>Minimalny / Maksymalny depozyt</th>
+        <th>Depozyt (min./maks.)</th>
         <th>Minimalna wypłata</th>
         <th>Czas przetwarzania transakcji</th>
       </tr>
@@ -584,38 +576,38 @@ Slottica wyróżnia się dostępnością gier od wiodących producentów, co zwi
     <tbody>
       <tr>
         <td>Mastercard, Visa</td>
-        <td>60 – 5 000 zł</td>
-        <td>750 – 10 000 zł</td>
+        <td>60 – 5,000 zł</td>
+        <td>750 – 10,000 zł</td>
         <td>24 – 72 godziny</td>
       </tr>
       <tr>
         <td>Przelew bankowy</td>
-        <td>250 – 5 000 zł</td>
-        <td>200 – 4 000 zł</td>
+        <td>250 – 5,000 zł</td>
+        <td>200 – 4,000 zł</td>
         <td>Do pięciu dni roboczych</td>
       </tr>
       <tr>
         <td>Blik</td>
-        <td>60 – 2 300 zł</td>
+        <td>60 – 2,300 zł</td>
         <td>-</td>
         <td>Natychmiast</td>
       </tr>
       <tr>
         <td>Bitcoin</td>
-        <td>300 – 7 500 zł</td>
+        <td>300 – 7,500 zł</td>
         <td>-</td>
         <td>Natychmiast</td>
       </tr>
       <tr>
         <td>Binance Pay, eZeeWallet</td>
-        <td>50 – 5 000 zł</td>
+        <td>50 – 5,000 zł</td>
         <td>-</td>
         <td>Natychmiast</td>
       </tr>
       <tr>
         <td>Jeton, Jeton Cash, MiFinity</td>
-        <td>50 – 9 000 zł</td>
-        <td>700 – 2 300 zł</td>
+        <td>50 – 9,000 zł</td>
+        <td>700 – 2,300 zł</td>
         <td>Natychmiast</td>
       </tr>
     </tbody>
@@ -623,6 +615,15 @@ Slottica wyróżnia się dostępnością gier od wiodących producentów, co zwi
 </div>
 
 <p>Aby móc wypłacić swoje wygrane, konieczne jest przejście przez proces weryfikacji profilu. W tym celu musisz dostarczyć odpowiednie dokumenty do działu obsługi klienta. Cały proces weryfikacji może zająć od jednego do trzech dni roboczych, dlatego sugerujemy przeprowadzenie go od razu po zakończeniu rejestracji, by uniknąć opóźnień w przyszłości.</p>
+
+<h2 id="jak">Aplikacja kasyna Slottica</h2>
+<p>Obecnie około 67% populacji światowej korzysta z telefonów komórkowych, a ich liczba ciągle wzrasta. W Slottica, wychodzimy naprzeciw oczekiwaniom naszych użytkowników, oferując nie tylko standardową wersję naszej strony na komputery, ale również zoptymalizowaną wersję mobilną. Często dostarczamy również dedykowaną aplikację kasynową, która pozwala grać na prawdziwe pieniądze bezpośrednio z telefonu. Dzięki temu nasi gracze mają pełny dostęp do wszystkich usług: mogą dokonywać wpłat, wypłacać wygrane, stawiać zakłady oraz kontaktować się z naszą obsługą klienta. W Slottica Casino nie jesteśmy wyjątkiem, stawiamy na innowacje i najlepsze doświadczenia dla naszych użytkowników.</p>
+<center><picture>
+    <source srcset="" data-srcset="images/sl-aplikacja.webp" type="image/webp">
+    <img src="#" data-src="images/sl-aplikacja.png" alt="Online casino w Polsce przygotowało aplikację, pobierz na telefon i wybierz gry na prawdziwe pieniądze" title="Slottica Aplikacja" class="lazyload">
+</picture></center>
+<p>Chociaż nasza strona internetowa jest kompatybilna zarówno z komputerami stacjonarnymi, jak i urządzeniami mobilnymi, oferujemy również bezpłatną aplikację mobilną, która sprawia, że gra jest jeszcze wygodniejsza. Nasza aplikacja kasyna online jest dostępna tylko na urządzeniach mobilnych z systemami operacyjnymi Android i iOS. Aplikację Slottica APK można pobrać na dwa sposoby. Pierwszą opcją jest skorzystanie z linku podanego na naszej stronie i pobranie pliku instalacyjnego za pomocą przycisku "Pobierz". Drugą metodą jest zeskanowanie kodu QR. Nawiasem mówiąc, jeśli przed zainstalowaniem aplikacji dokonałeś depozytu w wysokości co najmniej 25 ZL, po zainstalowaniu oprogramowania na smartfonie otrzymasz bonus bez depozytu.</p>
+
 </main>
 
   <footer class="c-footer">
