--- a/index.html
+++ b/index.html
@@ -568,46 +568,46 @@ Slottica wyróżnia się dostępnością gier od wiodących producentów, co zwi
     <thead>
       <tr>
         <th>Metoda płatności</th>
-        <th>Depozyt (min./maks.)</th>
-        <th>Minimalna wypłata</th>
-        <th>Czas przetwarzania transakcji</th>
+        <th>Zakres depozytu</th>
+        <th>Minimalna kwota wypłaty</th>
+        <th>Orientacyjny czas przetwarzania</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>Mastercard, Visa</td>
-        <td>60 – 5,000 zł</td>
-        <td>750 – 10,000 zł</td>
+        <td>60 zł – 5,000 zł</td>
+        <td>750 zł – 10,000 zł</td>
         <td>24 – 72 godziny</td>
       </tr>
       <tr>
         <td>Przelew bankowy</td>
-        <td>250 – 5,000 zł</td>
-        <td>200 – 4,000 zł</td>
-        <td>Do pięciu dni roboczych</td>
+        <td>250 zł – 5,000 zł</td>
+        <td>200 zł – 4,000 zł</td>
+        <td>Do 5 dni roboczych</td>
       </tr>
       <tr>
         <td>Blik</td>
-        <td>60 – 2,300 zł</td>
-        <td>-</td>
+        <td>60 zł – 2,300 zł</td>
+        <td>Nie dotyczy</td>
         <td>Natychmiast</td>
       </tr>
       <tr>
         <td>Bitcoin</td>
-        <td>300 – 7,500 zł</td>
-        <td>-</td>
+        <td>300 zł – 7,500 zł</td>
+        <td>Nie dotyczy</td>
         <td>Natychmiast</td>
       </tr>
       <tr>
         <td>Binance Pay, eZeeWallet</td>
-        <td>50 – 5,000 zł</td>
-        <td>-</td>
+        <td>50 zł – 5,000 zł</td>
+        <td>Nie dotyczy</td>
         <td>Natychmiast</td>
       </tr>
       <tr>
         <td>Jeton, Jeton Cash, MiFinity</td>
-        <td>50 – 9,000 zł</td>
-        <td>700 – 2,300 zł</td>
+        <td>50 zł – 9,000 zł</td>
+        <td>700 zł – 2,300 zł</td>
         <td>Natychmiast</td>
       </tr>
     </tbody>
